--- a/styles.css
+++ b/styles.css
@@ -45,3 +45,9 @@ a:link {
 a:visited {
     color:rgb(0, 255, 255);
 }
+
+a:hover {
+    color:rgb(240, 204, 0);
+    font-weight: bold;
+    text-decoration: underline dotted;
+}
