--- a/styles.css
+++ b/styles.css
@@ -46,13 +46,14 @@ a:visited {
     color:rgb(0, 255, 255);
 }
 
-a:active {
-    background-color: darkslategrey;
-
-}
-
 a:hover {
     color:rgb(240, 204, 0);
     font-weight: bold;
     text-decoration: underline dotted;
 }
+
+a:active {
+    background-color: darkslategrey;
+
+}
+/* LVHA */
