--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,11 @@ nav {
   margin-left: 15px;
 }
 
+h1 {
+  font-size: 35px;
+  margin-bottom: 30px;
+}
+
 h1,
 h2,
 h3 {
@@ -26,9 +31,9 @@ h3 {
   border: 2px solid rgb(240, 204, 0);
 }
 
-h1 {
-  font-size: 35px;
-  margin-bottom: 30px;
+h2,
+h3 {
+  margin-bottom: 15px;
 }
 
 body {
