--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@ a:hover {
   color: rgb(240, 204, 0);
   font-weight: bold;
   text-decoration: underline dotted;
+  cursor: pointer;
 }
 
 a:active {
